--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,12 @@ dist-ssr
 .env.test.local
 .env.production.local
 
+# Supabase
+supabase/.branches
+supabase/.temp
+.env.keys
+.env.*.local
+
 # Coverage reports
 coverage/
 *.lcov
